switch to axum web

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,6 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-actix-web = "4"
+axum = "0.8.4"
 serde = "1.0.219"
 ts-rs = "10.1"
+tokio = { version = "1", features = ["full"] }
+hyper = { version = "1", features = ["full"] }
+
+http-body-util = "0.1"
+hyper-util = { version = "0.1", features = ["full"] }
+
