--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -13,3 +13,4 @@ hyper = { version = "1", features = ["full"] }
 http-body-util = "0.1"
 hyper-util = { version = "0.1", features = ["full"] }
 
+sqlx = { version = "0.8", features = [ "runtime-tokio" ] }
