--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,9 +8,7 @@ axum = "0.8.4"
 serde = "1.0.219"
 ts-rs = "10.1"
 tokio = { version = "1", features = ["full"] }
-hyper = { version = "1", features = ["full"] }
+tower = { version = "0.4", features = ["full"] }
 
-http-body-util = "0.1"
-hyper-util = { version = "0.1", features = ["full"] }
 
 sqlx = { version = "0.8", features = [ "runtime-tokio" ] }
