--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,4 +1,9 @@
 {
+  "compilerOptions": {
+    "paths": {
+	  "@components/**": ["./src/components/*"]
+	 }
+  },
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
