--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
+	"baseUrl": ".",
     "paths": {
-	  "@components/**": ["./src/components/*"]
-	 }
+      "@components/*": ["./src/components/*"]
+    }
   },
   "files": [],
   "references": [
