--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+
+uuid = { version = "1.16.0", features = ["v1", "serde"] }
 axum = "0.8.4"
 serde = "1.0.219"
 serde_json = "1.0"
@@ -14,4 +16,8 @@ tower = { version = "0.4", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 
+chrono = "0.4.41"
+env-file-reader = "0.3.0"
+
 sqlx = { version = "0.8", features = [ "runtime-tokio-native-tls", "postgres", "uuid", "time" ] }
+
