--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -13,7 +13,7 @@ lalrpop = "0.22.1"
 [dependencies]
 
 uuid = { version = "1.16.0", features = ["v1", "serde"] }
-axum = "0.8.4"
+axum = { version = "0.8.4", features = ["macros"] }
 serde = "1.0.219"
 serde_json = "1.0"
 ts-rs = "10.1"
