add new client path alias, add new card display

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -3,6 +3,7 @@
 	"baseUrl": ".",
     "paths": {
       "@components/*": ["./src/components/*"],
+	  "@client/*": ["./src/client/*"],
 	  "@bindings/*": ["../backend/bindings/*"]
     }
   },
