--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -13,11 +13,12 @@ lalrpop = "0.22.1"
 [dependencies]
 
 uuid = { version = "1.16.0", features = ["v1", "serde"] }
-axum = { version = "0.8.4", features = ["macros"] }
+axum = { version = "0.8.4", features = ["macros", "ws"] }
 serde = "1.0.219"
 serde_json = "1.0"
 ts-rs = "10.1"
 tokio = { version = "1", features = ["full"] }
+tokio-tungstenite = "*"
 tower = { version = "0.4", features = ["full"] }
 
 tracing = "0.1"
