--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -12,7 +12,7 @@ lalrpop = "0.22.1"
 
 [dependencies]
 
-uuid = { version = "1.16.0", features = ["v1", "serde"] }
+uuid = { version = "1.16.0", features = ["v1", "v4", "serde"] }
 axum = { version = "0.8.4", features = ["macros", "ws"] }
 serde = "1.0.219"
 serde_json = "1.0"
