seperate out pages and components

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -4,6 +4,7 @@
     "paths": {
       "@components/*": ["./src/components/*"],
 	  "@client/*": ["./src/client/*"],
+	  "@pages/*": ["./src/pages/*"],
 	  "@bindings/*": ["../backend/bindings/*"]
     }
   },
