add styles to paths

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,6 +5,7 @@
       "@components/*": ["./src/components/*"],
 	  "@client/*": ["./src/client/*"],
 	  "@pages/*": ["./src/pages/*"],
+	  "@styles/*": ["./src/styles/*"],
 	  "@bindings/*": ["../backend/bindings/*"]
     }
   },
