add password verification / hashing

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -32,3 +32,5 @@ sqlx = { version = "0.8", features = [ "runtime-tokio-native-tls", "postgres", "
 
 
 lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
+argon2 = "0.5.3"
+anyhow = "1.0.98"
