--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -34,3 +34,4 @@ sqlx = { version = "0.8", features = [ "runtime-tokio-native-tls", "postgres", "
 lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
 argon2 = "0.5.3"
 anyhow = "1.0.98"
+axum-login = "0.17.0"
