--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -28,7 +28,7 @@ tracing-subscriber = "0.3"
 chrono = "0.4.41"
 env-file-reader = "0.3.0"
 
-sqlx = { version = "0.8", features = [ "runtime-tokio-native-tls", "postgres", "uuid", "time" ] }
+sqlx = { version = "0.8", features = [ "runtime-tokio-native-tls", "postgres", "uuid", "chrono" ] }
 
 
 lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
