--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -14,6 +14,8 @@ lalrpop = "0.22.1"
 
 uuid = { version = "1.16.0", features = ["v1", "v4", "serde"] }
 axum = { version = "0.8.4", features = ["macros", "ws"] }
+axum-extra = { version = "0.10.1", features = ["cookie"] }
+
 serde = "1.0.219"
 serde_json = "1.0"
 ts-rs = "10.1"
