--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "path": "^0.12.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-paginate": "^8.3.0",
     "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
